# 30122-project-zip-link

./: README.md  pyproject.toml
milestones/: milestone1.md  milestone2.md
zip_link/cleaning_analysis/: Accessibility_Index.py  Hospital_Data.py  Population.py  accessibility_index.py  bulk_data_processing.py  hospital_data.py  schools_data.py  unified_community_health.py  zipatlas_data.py
zip_link/data/preprocessed/: combined_data.csv  grocery_store_data.csv  hospital_data.csv  park_data.csv  population_data.csv  public_transit_data.csv  school_data.csv  unified_community_health_count.csv  unified_community_health_data.csv  zipatlas_bulk_merge.csv  zipatlas_health.csv
zip_link/data/raw/: zip_population.csv
zip_link/data/raw/Hospitals/: hospitals.csv
zip_link/data/raw/Population/: Population_Data.csv  Population_data.csv
zip_link/data/raw/community_health_ctr/: HRSA_Data.csv  healthcentre_pdf.csv
zip_link/data/raw/parks/: CPD_Parks_2025.csv
zip_link/data/raw/public_transit/: publictransit_2024.csv
zip_link/tests/: Hospitals_test.py  final_join_tests.py  grocery_stores_tests.py  healthctr_tests.py  merge_visualization_tests.py  parks_tests.py  publictransit_tests.py  schools_tests.py  test_health_data.csv  test_hrsa_data.csv  zipatlas_scrape_tests.py
zip_link/visualization/: Bi-directionalBarChart.py  Pragya_code.py  demo_data_for_visualization.csv  merge_visualization.py  scatterplot.py  visualization.py  zcta_shapefile.dbf
zip_link/visualization/misc_code/: Pragya_code.py  demo_data_for_visualization.csv  visualization.py
(+7 files in other folders)
