[project]
name = "zip_link"
version = "0.1.0"
description = "Relationship between Housing Prices and Essential Services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "geopandas>=1.0.1",
  "pyproj>=3.7.1",
  "httpx>=0.28.1",
  "requests>2.28.1",
  "ipdb>=0.13.13",
  "ipython>=8.27.0",
  "pandas>=2.2.3",
  "pytest>=8.3.4",
  "shapely>=2.0.6",
  "tabula-py>=2.10.0",
  "jpype1>=1.5.2",
  "pdfplumber>=0.11.5",
  "jellyfish>=1.1.3",
  "cssselect>=1.2.0",
  "httpx>=0.27.2",
  "lxml>=5.3.0"
  "dash>=2.18.2"
  "plotly>=6.0.0"
  "shapely>=2.0.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
ignore = [
  "F401", # allow unused imports (useful for assignments)
  "N818",
]
